# file-shrimp

./: Makefile.am  autogen.sh  callbacks.c  callbacks.h  configure.in  file-shrimp.desktop.in  file-shrimp.glade  file-shrimp.gladep  file-shrimp.sh  file-shrimp.spec.in  interface.c  interface.h  main.c  svn-commit.3.tmp
po/: de.po  es.po  fr.po  it.po  ja.po  ko.po  nl.po  zh_CN.po  zh_TW.po
